# programming

./: .gitignore  README  perf_measure
c/: meson.build
c-programming/internal-hashtable/: .gitignore  CMakeLists.txt  inthash.c  inthash.h  main.c  readme
c/internal-hashtable/: CMakeLists.txt  inthash.c  inthash.h  main.c  meson.build
c/negative-binary/: CMakeLists.txt  meson.build  nb.cpp
perl-scripts/pmap-parser/: pmap-parser
perl-scripts/targettest/: targettest
perl/cinclude2dot-ng/: cinclude2dot-ng
perl/multiplefork/: multiplefork.pl
perl/pmap-parser/: pmap-parser
perl/targettest/: targettest  targettest.pl
python-scripts/buildbot-cleanup/: buildbot-cleanup.py
python-scripts/buildqueue/: buildqueue.py
python-scripts/ninja-color/: ninja-color.py
python/buildbot-cleanup/: buildbot-cleanup.py
python/buildqueue/: buildqueue.py
python/ninja-color/: ninja-color.py
rust/: .gitignore
rust/allergies/src/: lib.rs
rust/anagram/src/: lib.rs
rust/armstrong-numbers/src/: lib.rs
rust/atbash-cipher/src/: lib.rs
rust/beer-song/src/: lib.rs
rust/bob/src/: lib.rs
rust/clock/src/: lib.rs
rust/difference-of-squares/src/: lib.rs
rust/dot-dsl/src/: lib.rs
rust/gigasecond/src/: lib.rs
rust/grains/src/: lib.rs
rust/hello-world/: README.md
rust/leap/: README.md
rust/matrix_numbers/: Cargo.toml
rust/prime-factors/: out.sv  perf.data  perf.data.old
rust/raindrops/: Cargo.toml
rust/robot-name/: Cargo.toml
rust/scanner/: Cargo.toml
rust/word-count/: Cargo.toml
scripts/cmakeninja/: cmakeninja
scripts/tooling/: CMakeLists.txt
(+16 files in other folders)
