cmake_minimum_required (VERSION 2.6)
project (internal_hash C)
add_executable(demo main.c)
add_library(inthash SHARED inthash.c)
target_link_libraries(demo inthash cunit)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_BUILD_TYPE Debug)

#ADD_CUSTOM_COMMAND(TARGET demo POST_BUILD COMMAND cppcheck *.h)
ADD_CUSTOM_TARGET(cppcheck ALL cppcheck *.h DEPENDS demo)
